## game.py

class Game:
    def __init__(self):
        self.score = 0
        self.speed = 1
        self.running = False

    def start_game(self):
        self.running = True

    def update(self):
        # Update game state
        pass

    def draw(self):
        # Draw game elements
        pass

    def change_direction(self, direction: str):
        # Change the direction of the snake
        pass


class Snake:
    def __init__(self):
        self.body = [(0, 0)]
        self.direction = 'right'

    def move(self):
        # Move the snake
        pass

    def grow(self):
        # Increase the length of the snake
        pass

    def check_collision(self):
        # Check for collision with walls or itself
        pass


class Food:
    def __init__(self):
        self.x = 0
        self.y = 0

    def generate(self):
        # Generate new food position
        pass
