
classDiagram
    class Game {
        -int score
        -int speed
        -bool running
        +start_game()
        +update()
        +draw()
        +change_direction(direction: str)
    }
    class Snake {
        -list body
        -str direction
        +move()
        +grow()
        +check_collision()
    }
    class Food {
        -int x
        -int y
        +generate()
    }
    Game --> Snake
    Game --> Food
